Fixed issues on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,8 @@ body {
   overflow-x: hidden;
   margin: 0;
   z-index: 0;
+  height: 100%;
+  width: 100%;
 }
 
 body::before {
